--- a/style.css
+++ b/style.css
@@ -21,7 +21,12 @@ html {
     background-color: lightblue;
     margin: 0;
 }
+
+
 body {
+    display: flex;
+    flex-direction: column;
+    flex-shrink: 0;
     margin-left: auto;
     margin-right: auto;
     max-width: 960px;
@@ -29,7 +34,16 @@ body {
     width: 95%;
  }
  
+ .content {
+   display: flex;
+   flex-direction: row;
+   justify-content: space-between;
+}
+
+
+
 /* Header styles */
+
  body > header > img {
     display: block;
     width: 100%;
@@ -43,18 +57,21 @@ body {
  /* Horizontal Navigation Styles */
  
  nav.horizontalNav {
-    overflow: hidden;
-    margin-bottom: 40px;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    list-style: none;
+    padding: 0 0 20px 0;
 }
 
  nav.horizontalNav li {
-    display: block;
-    float: left;
+    flex: 1 1 0;
  }
 
  nav.horizontalNav a {
-    display: block;
-    text-align: center;
+    display: flex;  /* Flex for centering the link content */
+    justify-content: center;
+    align-items: center;
     padding: 20px;
     background-color: aquamarine;
     text-decoration: none;
@@ -62,9 +79,13 @@ body {
     border: 2px solid #333; 
  }
 
- header nav ul {
-    list-style: none;
- }
+ nav ul {
+   display: flex;
+   width: 100%;
+   padding: 0;
+   margin: 0;
+   list-style: none;
+}
 
  nav ul li a {
    font-weight: bolder;
@@ -73,17 +94,26 @@ body {
  /* Body Styles  */
 
  article.leftText {
+   flex: 2;
    margin: 40px 0;
    padding: 1.5em;
    line-height: 2;
    align-self: center;
  }
 
- body > aside img#calf {
+
+ aside {
+   flex: 1;
+   display: flex;
+   align-items: center;
+}
+
+aside img#calf {
    display: block;
-   width: 80%;
+   width: 100%;
    margin: auto;
  }
+
 
  /* Footer Navigation Styles */
 
