--- a/style.css
+++ b/style.css
@@ -27,8 +27,7 @@ body {
     display: flex;
     flex-direction: column;
     flex-shrink: 0;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 auto;
     max-width: 960px;
     min-width: 640px;
     width: 95%;
@@ -49,9 +48,6 @@ body {
     width: 100%;
  }
 
- body > header > nav.horizontalNav li {
-    width: 25%;
- }
 
 
  /* Horizontal Navigation Styles */
@@ -61,15 +57,15 @@ body {
     flex-flow: row nowrap;
     justify-content: space-between;
     list-style: none;
-    padding: 0 0 20px 0;
+    padding: 0 0 20px;
 }
 
  nav.horizontalNav li {
-    flex: 1 1 0;
+    flex: 1;
  }
 
  nav.horizontalNav a {
-    display: flex;  /* Flex for centering the link content */
+    display: flex;
     justify-content: center;
     align-items: center;
     padding: 20px;
@@ -117,42 +113,44 @@ aside img#calf {
 
  /* Footer Navigation Styles */
 
+ nav.footerNav {
+   display: flex;
+   width: 100%;
+}
+
 footer h1 {
-    display: block;
     text-align: center;
     font-size: larger;
-    clear: both;
     padding: 20px;
  }
-
 
  body > footer address {
     color: white;
     background-color: #333;
-    display: block;
     text-align: center;
-    clear: both;
  }
 
+ nav.footerNav li {
+   flex: 1;
+}
+
  nav.footerNav a {
-    display: block;
-    text-align: center;
-    padding: 20px;
+   display: flex;
+    flex: 1;
+    justify-content: center;
+    align-items: center; /* Center the text vertically */
+    width: 100%;
+    padding: 20px 0;
     background-color: aquamarine;
     text-decoration: none;
     color: black;
     border: 2px solid #333; 
+    box-sizing: border-box;
  }
  
- body > footer > nav.footerNav li {
-    list-style: none;
-    width: 50%;
-    float: left;
- }
 
  .footerNav a img {
     width: 16px;
     height: auto;
     margin-right: 5px;
  }
-
