--- a/style.css
+++ b/style.css
@@ -38,6 +38,17 @@ body > header {
    object-fit: cover;
  }
 
+#milkingCountdown {
+   color: darkgrey;
+   background-color: #F5F5DC;
+   border: thin solid black;
+   text-align: center;
+   font-size: 1.5rem;
+   font-weight: bolder;
+   padding: 20px 100px;
+   margin: 20px 100px;
+   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
 
 
  /* Horizontal Navigation Styles */
@@ -78,6 +89,7 @@ body > header {
  nav.horizontalNav ul {
    display: flex;
    justify-content: center;
+   text-align: center;
    width: 100%;
    padding: 0;
    margin: 0;
@@ -128,6 +140,8 @@ body > header {
 aside img#calf {
    width: 70%;
    margin: auto;
+   border: thin solid black;
+   box-shadow: 0px -25px 20px -20px rgba(0, 0, 0, 0.45), 25px 0 20px -20px rgba(0, 0, 0, 0.45);
  }
 
 
@@ -267,6 +281,7 @@ aside img#calf {
 #holsteinPic {
    flex: 1;
    width: 200px;
+   border: thin solid black;
    box-shadow: 0px -25px 20px -20px rgba(0, 0, 0, 0.45), 25px 0 20px -20px rgba(0, 0, 0, 0.45);
 }
 
