--- a/style.css
+++ b/style.css
@@ -365,6 +365,60 @@ aside img#calf {
    font-size: 1.2em  ;
 }
 
+/* Recipes Page Styles */
+
+#recipesSection {
+   display: flex;
+   flex-flow: column nowrap;
+   width: 80%;
+   margin: auto;
+}
+
+#recipesSection h2 {
+   font-size: 2.5em;
+   text-align: center;
+   padding-top: 30px;
+}
+
+.recipe {
+   background-color: #F5F5DC;
+   display: flex;
+   flex-direction: column;
+   padding: 30px 50px;
+   margin: 50px 0;
+}
+
+.recipeDiscription {
+   line-height: 2;
+   text-align: center;
+}
+
+
+.recipe h3 {
+   font-size: 2em;
+   text-align: center;  
+   margin: 20px auto;
+}
+
+.recipe h4 {
+   font-size: 1.5em;
+   padding: 30px 0;
+}
+
+.ingredients li, .instructions li {
+   margin: 10px 0 10px 20px;
+   line-height: 2;
+}
+
+
+/* Butter Recipe */
+#butterPic {
+   max-width: 10%;
+   border: 8px solid #fff;
+   border-radius: 200px;
+   align-self: center;
+}
+
 
 /* Contact Page Styles */
 #contactSection {
@@ -372,7 +426,7 @@ aside img#calf {
 }
 
 h1#contactHead {
-   font-size: 2em;
+   font-size: 2.5em;
    text-align: center;
 }
 
