--- a/style.css
+++ b/style.css
@@ -166,7 +166,9 @@ aside img#calf {
 
 .about p {
    line-height: 2;
-   margin-bottom: 20px;
+   margin: 20px auto;
+   font-size: 1.1em;
+   text-align: center;
 }
 
 .aboutHead {
@@ -253,12 +255,17 @@ aside img#calf {
    text-align: center;
 }
 
-#farmLifeBox h1 {
-   font-size: 2em;
+#farmLifeBox h5 {
+   text-align: center;
+   font-size: 1.5em;
+   font-weight: bold;
 }
 
 #farmLifeBox p {
-   margin: 10px 20px;
+   line-height: 2;
+   margin: 20px auto;
+   font-size: 1.1em;
+   text-align: center;
 }
 
 
